{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 503,
  "lineage": "7a902bfc-82c0-9f30-5f6e-489ec0a9245c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupOne/aaf8429353454f5c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:listener-rule/app/StageB-Live2-xnlTjSaDmFvj/92bd57624dc83d12/66a13a3fe0951914/e1f48e802c571cfa",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/bksblive2/v5api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:listener-rule/app/StageB-Live2-xnlTjSaDmFvj/92bd57624dc83d12/66a13a3fe0951914/e1f48e802c571cfa",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:listener/app/StageB-Live2-xnlTjSaDmFvj/92bd57624dc83d12/66a13a3fe0951914",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.alb_target_group_one"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupOne/aaf8429353454f5c",
            "arn_suffix": "targetgroup/ALBTargetGroupOne/aaf8429353454f5c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/api/healthCheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupOne/aaf8429353454f5c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTargetGroupOne",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "StageBKSBReformsAPIAppSydney/ALBTargetGroupOne/Resource"
            },
            "tags_all": {
              "name": "StageBKSBReformsAPIAppSydney/ALBTargetGroupOne/Resource"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-005358c415bc03d2a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupTwo/bb376ca1e13b73e7",
            "arn_suffix": "targetgroup/ALBTargetGroupTwo/bb376ca1e13b73e7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 20,
                "matcher": "200",
                "path": "/api/healthCheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:352515133004:targetgroup/ALBTargetGroupTwo/bb376ca1e13b73e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALBTargetGroupTwo",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "StageBKSBReformsAPIAppSydney/ALBTargetGroupTwo/Resource"
            },
            "tags_all": {
              "Name": "StageBKSBReformsAPIAppSydney/ALBTargetGroupTwo/Resource"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-005358c415bc03d2a"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bksb_reforms_api_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:352515133004:security-group/sg-06a902dd1b0d7e213",
            "description": "StageBKSBReformsAPIAppSydney/BKSBReformsAPISG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP egress rule for internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS egress rule for internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.20.0/24"
                ],
                "description": "SQL Server egress rule for Database Subnet",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [
                  "10.10.21.0/24"
                ],
                "description": "SQL Server egress rule for Database Subnet",
                "from_port": 1433,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1433
              },
              {
                "cidr_blocks": [
                  "10.10.22.0/24"
                ],
                "description": "Redis egress rule for Redis Subnet",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.10.23.0/24"
                ],
                "description": "Redis egress rule for Redis Subnet",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-06a902dd1b0d7e213",
            "ingress": [],
            "name": "StageBKSBReformsAPIAppSydney/BKSBReformsAPISG",
            "name_prefix": "",
            "owner_id": "352515133004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "StageBKSBReformsAPIAppSydney/BKSBReformsAPISG/Resource"
            },
            "tags_all": {
              "Name": "StageBKSBReformsAPIAppSydney/BKSBReformsAPISG/Resource"
            },
            "timeouts": null,
            "vpc_id": "vpc-005358c415bc03d2a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bksb_reforms_api_sg_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Load balancer to target",
            "from_port": 443,
            "id": "sgrule-1432720130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06a902dd1b0d7e213",
            "security_group_rule_id": "sgr-0a3f6d763f966fa4e",
            "self": false,
            "source_security_group_id": "sg-0b9c02e80606fdf25",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bksb_reforms_api_sg"
          ]
        }
      ]
    }
  ]
}